Kubernetes/Services/APIGateway/apigateway.deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: apigateway-service
  namespace: kwetter
  labels:
    app: apigateway
    service: apigateway-service
spec:
  selector:
    app: apigateway-pod
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: 8100
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigateway
  namespace: kwetter
spec:
  replicas: 1
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: apigateway-pod
      version: latest
  template:
    metadata:
      labels:
        app: apigateway-pod
        version: latest
    spec:
      containers:
      - name: apigateway-container
        image: timdus/kwettergateway:latest
        ports:
        - containerPort: 8100
        resources:
          limits:   
            memory: 512Mi
            cpu: "1"
