Kubernetes/Services/APIGateway/apigateway.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apigateway-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: kwetter.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apigateway-service
            port:
              number: 80
